--- a/MiTrabajo/views/layout.pug
+++ b/MiTrabajo/views/layout.pug
@@ -15,16 +15,16 @@ html(lang="en")
         main.contenedor
             aside.contenedor-proyectos
                 .panel.crear-proyecto
-                    a(href="#" class="boton") Nuevo proyecto
+                    a(href="/nuevo-proyecto" class="boton") Nuevo proyecto
                         span +
                 .panel.lista-proyectos
                     h2 Proyectos
                     ul#proyectos.proyectos
                         li
-                            a(/href="#") Diseño de Tienda virtual
+                            a(href="#") Diseño de Tienda virtual
                         li
-                            a(/href="#") Diseño de Nuevo blog
+                            a(href="#") Diseño de Nuevo blog
                         li
-                            a(/href="#") Diseño de logo
+                            a(href="#") Diseño de logo
 
             block contenido
