--- a/MiTrabajo/views/layout.pug
+++ b/MiTrabajo/views/layout.pug
@@ -20,11 +20,11 @@ html(lang="en")
                 .panel.lista-proyectos
                     h2 Proyectos
                     ul#proyectos.proyectos
-                        li
-                            a(href="#") Diseño de Tienda virtual
-                        li
-                            a(href="#") Diseño de Nuevo blog
-                        li
-                            a(href="#") Diseño de logo
+                        if(proyectos.length)
+                            each proyecto in proyectos
+                                li
+                                    a(href=`/proyectos/${proyectos.url}`)= proyecto.nombre
 
             block contenido
+
+                //- pre= vardump(proyectos)
