--- a/MiTrabajo/views/layout.pug
+++ b/MiTrabajo/views/layout.pug
@@ -7,15 +7,15 @@ html(lang="en")
         link(rel="stylesheet",href="/css/normalize.css")
         link(rel="stylesheet",href="/css/app.css")
         title #{nombrePagina}
-    body 
+        body
         header.barra
             h1 UpTask - Administrador de Proyectos
-            a(href="#") Cerrar sesion
+            a(href="/cerrar-sesion") Cerrar Sesión
 
         main.contenedor
             aside.contenedor-proyectos
                 .panel.crear-proyecto
-                    a(href="/nuevo-proyecto" class="boton") Nuevo proyecto
+                    a(href="/nuevo-proyecto" class="boton") Nuevo Proyecto
                         span +
                 .panel.lista-proyectos
                     h2 Proyectos
@@ -23,8 +23,7 @@ html(lang="en")
                         if(proyectos.length)
                             each proyecto in proyectos
                                 li
-                                    a(href=`/proyectos/${proyectos.url}`)= proyecto.nombre
-
+                                    a(href=`/proyectos/${proyecto.url}`)= proyecto.nombre
             block contenido
 
                 //- pre= vardump(proyectos)
