--- a/MiTrabajo/views/layout.pug
+++ b/MiTrabajo/views/layout.pug
@@ -27,3 +27,4 @@ html(lang="en")
             block contenido
 
                 //- pre= vardump(proyectos)
+            script(src="/dist/bundle.js")
