--- a/MiTrabajo/views/layout.pug
+++ b/MiTrabajo/views/layout.pug
@@ -1,13 +1,8 @@
-doctype html
+<!DOCTYPE html>
 html(lang="en")
     head
-        meta(charset="UTF-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=edge")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        link(rel="stylesheet",href="/css/normalize.css")
-        link(rel="stylesheet",href="/css/app.css")
-        title #{nombrePagina}
-        body
+        include partials/header
+    body
         header.barra
             h1 UpTask - Administrador de Proyectos
             a(href="/cerrar-sesion") Cerrar Sesión
@@ -26,5 +21,6 @@ html(lang="en")
                                     a(href=`/proyectos/${proyecto.url}`)= proyecto.nombre
             block contenido
 
-                //- pre= vardump(proyectos)
-            script(src="/dist/bundle.js")
+            //- pre= vardump(proyectos)
+        
+        script(src="/dist/bundle.js")
