--- a/MiTrabajo/views/tareas.pug
+++ b/MiTrabajo/views/tareas.pug
@@ -4,37 +4,37 @@ block contenido
     .contenido-principal
         h1 #{nombrePagina} - #{proyecto.nombre}
 
-        //- form.agregar-tarea(action=`/proyectos/${proyecto.url}` method="POST")
-        //-     .campo
-        //-        label(for="tarea") Tarea:
-        //-        input.nombre-tarea(type="text" name="tarea" placeholder="Nombre Tarea")
-        //-     .campo.enviar
-        //-         input.boton.nueva-tarea(type="submit" value="Agregar") 
+        form.agregar-tarea(action=`/proyectos/${proyecto.url}` method="POST")
+            .campo
+               label(for="tarea") Tarea:
+               input.nombre-tarea(type="text" name="tarea" placeholder="Nombre Tarea")
+            .campo.enviar
+                input.boton.nueva-tarea(type="submit" value="Agregar") 
 
-        //- //- pre= vardump(tareas)
-        //- .listado-pendientes
-        //-     ul
-        //-       if tareas.length
-        //-         each tarea in tareas
-        //-             li.tarea(data-tarea=tarea.id)
-        //-                 p= tarea.tarea
-        //-                 .acciones
-        //-                     if tarea.estado
-        //-                         i.far.fa-check-circle.completo
-        //-                     else 
-        //-                         i.far.fa-check-circle
-        //-                     i.fas.fa-trash  
-        //-       else 
-        //-         p No hay tareas en este proyecto  
+        //- pre= vardump(tareas)
+        .listado-pendientes
+            ul
+              if tareas.length
+                each tarea in tareas
+                    li.tarea(data-tarea=tarea.id)
+                        p= tarea.tarea
+                        .acciones
+                            if tarea.estado
+                                i.far.fa-check-circle.completo
+                            else 
+                                i.far.fa-check-circle
+                            i.fas.fa-trash  
+              else 
+                p No hay tareas en este proyecto  
 
 
 
-        //- //- pre= vardump(tareas)
-        //- // Avance del Proyecto
-        //- .avance 
-        //-     h2 Avance del Proyecto
-        //-     #barra-avance.barra-avance
-        //-         #porcentaje.porcentaje
+        //- pre= vardump(tareas)
+        // Avance del Proyecto
+        .avance 
+            h2 Avance del Proyecto
+            #barra-avance.barra-avance
+                #porcentaje.porcentaje
 
 
         // Acciones que se pueden realizar
